--- a/P1/Pages/amuleto_magico.html
+++ b/P1/Pages/amuleto_magico.html
@@ -8,7 +8,7 @@
 <body>
   <header><h1>Amuleto Mágico</h1></header>
   <main class="producto-detalle">
-    <img src="../Images/amuletomagia.jpg" alt="Amuleto Mágico" class="producto-imagen">
+    <img src="../Images/amuletomagia.png" alt="Amuleto Mágico" class="producto-imagen">
     <div class="producto-info">
       <h2>Descripción</h2>
       <p>Este amuleto proporciona protección mágica contra maldiciones y hechizos oscuros.</p>
