--- a/P1/Pages/cristal_profecia.html
+++ b/P1/Pages/cristal_profecia.html
@@ -8,7 +8,7 @@
 <body>
   <header><h1>Cristal de Profecía</h1></header>
   <main class="producto-detalle">
-    <img src="../Images/cristalprofecia.jpg" alt="Cristal de Profecía" class="producto-imagen">
+    <img src="../Images/cristalprofecia.png" alt="Cristal de Profecía" class="producto-imagen">
     <div class="producto-info">
       <h2>Descripción</h2>
       <p>Este cristal revela visiones del futuro a quienes saben cómo usarlo correctamente.</p>
