--- a/P1/Pages/pociones.html
+++ b/P1/Pages/pociones.html
@@ -8,7 +8,7 @@
 <body>
   <header><h1>Pociones Mágicas</h1></header>
   <main class="producto-detalle">
-    <img id="imagen-pocion" src="../Images/pocion_roja.png" alt="Poción mágica" class="producto-imagen">
+    <img id="imagen-pocion" src="../Images/pocion.jpeg" alt="Poción mágica" class="producto-imagen">
     <div class="producto-info">
       <h2>Descripción</h2>
       <p>Elige entre varios tipos de pociones mágicas: curación, invisibilidad y maná. Cada una tiene efectos únicos.</p>
