--- a/P1/Pages/polvo_transporte.html
+++ b/P1/Pages/polvo_transporte.html
@@ -8,7 +8,7 @@
 <body>
   <header><h1>Polvo de Transporte</h1></header>
   <main class="producto-detalle">
-    <img src="../Images/polvotransporte.jpg" alt="Polvo de Transporte" class="producto-imagen">
+    <img src="../Images/polvotransporte.png" alt="Polvo de Transporte" class="producto-imagen">
     <div class="producto-info">
       <h2>Descripción</h2>
       <p>Una pizca de este polvo te llevará instantáneamente a cualquier rincón del reino mágico.</p>
