--- a/P1/Pages/varita_encantada.html
+++ b/P1/Pages/varita_encantada.html
@@ -8,7 +8,7 @@
 <body>
   <header><h1>Varita Encantada</h1></header>
   <main class="producto-detalle">
-    <img src="../Images/varita.jpg" alt="Varita Encantada" class="producto-imagen">
+    <img src="../Images/varita.png" alt="Varita Encantada" class="producto-imagen">
     <div class="producto-info">
       <h2>Descripción</h2>
       <p>Una varita poderosa forjada con madera de roble mágico y núcleo de unicornio.</p>
