--- a/P1/Pages/index.html
+++ b/P1/Pages/index.html
@@ -16,31 +16,31 @@
         <section class="productos">
 
             <div class="producto">
-                <img src="Images/pocion.jpg" alt="Poción mágica">
+                <img src="Images/pocion.jpeg" alt="Poción mágica">
                 <h3>Poción Mágica</h3>
                 <a class="boton" href="Pages/pociones.html">Ver más</a>
             </div>
 
             <div class="producto">
-                <img src="Images/amuletomagia.jpg" alt="Amuleto mágico">
+                <img src="Images/amuletomagia.png" alt="Amuleto mágico">
                 <h3>Amuleto Mágico</h3>
                 <a class="boton" href="Pages/amuleto_magico.html">Ver más</a>
             </div>
 
             <div class="producto">
-                <img src="Images/varita.jpg" alt="Varita encantada">
+                <img src="Images/varita.png" alt="Varita encantada">
                 <h3>Varita Encantada</h3>
                 <a class="boton" href="Pages/varita_encantada.html">Ver más</a>
             </div>
 
             <div class="producto">
-                <img src="Images/cristalprofecia.jpg" alt="Cristal de Profecía">
+                <img src="Images/cristalprofecia.png" alt="Cristal de Profecía">
                 <h3>Cristal de Profecía</h3>
                 <a class="boton-" href="Pages/cristal_profecia.html">Ver más</a>
             </div>
 
             <div class="producto">
-                <img src="Images/polvotransporte.jpg" alt="Polvo de Transporte">
+                <img src="Images/polvotransporte.png" alt="Polvo de Transporte">
                 <h3>Polvo de Transporte</h3>
                 <a class="boton" href="Pages/polvo_transporte.html">Ver más</a>
             </div>
